<resources>
    <string name="app_name">Game</string>
    <string name="coinlabel">Coins : </string>
    <string name="scorelabel">Score: </string>
    <string name="blank"> </string>
    <string name="moveup">up</string>
    <string name="movedown">down</string>
    <string name="moveleft">left</string>
    <string name="moveright">right</string>
    <string name="youwin">You Win!!</string>
    <string name="play">Play</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In!</string>
    <string name="action_log_in_short">Password</string>

</resources>
